# lpop

./: .env.example  .gitignore  .npmignore  BUN_BUILD.md  CLAUDE.md  CODE_SIGNING.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.debug  Dockerfile.github-actions  Dockerfile.ubuntu-exact  LICENSE  README-rust.md  README.md  TESTING.md  biome.json  bunfig.toml  debug-github-actions.sh  debug-ubuntu.sh  docker-compose.debug.yml  docker-compose.github.yml  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  release.md  test-hierarchical.sh  test-isolation.sh  tsconfig.json  vitest.config.ts
.claude/: settings.json
.github/: pull_request_template.md
docs/: keyring-issue.md  native-keychain.md  rust-migration.md  security-architecture.md  typescript-vs-rust-comparison.md
examples/: check_keychain.rs  debug_keychain_detailed.rs  debug_service_name.rs  debug_set_get.rs  test_alternative.rs  test_keychain.rs  test_service_names.rs  test_simple_names.rs  use-native-keychain.ts
scripts/: build-binary.js  build-binary.ps1  build-binary.sh  build-native.sh  build-sign-notarize.sh  entitlements.plist  postinstall.js  prepare-packages.js  sign-windows.js  sign-windows.ps1  test-signing-setup.ps1
src/: ask-messages.ts  cli.rs  cli.test.ts  cli.ts  env-file-parser.test.ts  env-file-parser.ts  env_parser.rs  fake-keyring.ts  git-path-resolver.test.ts  git-path-resolver.ts  git_resolver.rs  index.ts  keychain-manager-native.ts  keychain-manager.test.ts  keychain-manager.ts  keychain-native-adapter.ts  keychain.rs  lib.rs  main.rs  memory-keychain-manager-nomock.test.ts  (+5 more)
(+17 files in other folders)
